# DW-get-sigsif-data

./: README.md  pyproject.toml
data/refined/: sigsif_list_refined.xlsx
src/: extract.py  refine.py  transform.py
